--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Omer Olleres' Portfolio</h1>
     <h2>I am a Web Developer </h2>
     <hr />
-    <h3><a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/The Best Movies.png" height="200" />
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="../4.3 HTML Porfolio Project/assets/images/Birthday Invite.png" height="200" />
+    <img src="./assets/images/Birthday Invite.png" height="200" />
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
